contact us updated

--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
                 <a href="brand.html">Brand</a>
                 <a href="shop.html">Products</a>
                 <a href="clients.html">Clients</a>
-                <!-- <a href="blog.html">Contact us</a> -->
+                <a href="blog.html">Contact us</a>
               </div>
             </div>
           </div>
@@ -183,5 +183,165 @@
             </div>
           </div>
     </section>
+
+  <!-- info section -->
+  <section class="info_section layout_padding2">
+    <div class="container">
+      <div class="row info_form_social_row">
+        <div class="col-md-8 col-lg-9">
+          <div class="info_form">
+            <form action="">
+              <input type="email" placeholder="Enter your email">
+              <button>
+                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-3">
+
+          <div class="social_box">
+            <img src="assets/images/Taupe Logo-ai nn.png" width="60%">
+
+            <!-- <a href="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+            <a href="https://wa.me/+9716 5342 544" target="_blank">
+              <i class="fa fa-whatsapp" aria-hidden="true"></i>
+            </a> -->
+          </div>
+        </div>
+      </div>
+      <div class="row info_main_row">
+        <div class="col-md-4">
+          <div class="info_links">
+            <h4>
+              Menu
+            </h4>
+            <div class="info_links_menu">
+              <a href="home.html">Home</a>
+              <a href="brand.html">Brand</a>
+              <a href="shop.html">Products</a>
+              <a href="clients.html">Clients</a>
+              <a href="blog.html">Contact us</a>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="col-md-6 col-lg-3">
+          <div class="info_insta">
+            <h4>
+              Instagram
+            </h4>
+            <div class="insta_box">
+              <div class="img-box">
+                <img src="images/p1.png" alt="">
+              </div>
+              <p>
+                long established fact that a reader
+              </p>
+            </div>
+            <div class="insta_box">
+              <div class="img-box">
+                <img src="images/p2.png" alt="">
+              </div>
+              <p>
+                long established fact that a reader
+              </p>
+            </div>
+          </div>
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-3">
+          <div class="info_detail">
+            <h4>
+              About Us
+            </h4>
+            <p class="mb-0">
+              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
+            </p>
+          </div>
+        </div> -->
+        <div class="col-md-4">
+          <h4>
+            Contact US
+          </h4>
+          <div class="info_contact">
+            <p>
+              <span>
+                MUNEER
+              </span>
+              <br>
+              <span>+97155 4078 004</span>
+            </p>
+
+            <p>
+              <span>
+                FARHAN
+              </span>
+              <br>
+              <span>+97155 9747 125</span>
+            </p>
+            <p>
+              <span>
+                IRSHAD
+              </span>
+              <br>
+              <span>+97158 6591 937</span>
+            </p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h4>
+            REACH US
+          </h4>
+          <div class="info_contact">
+            <p>
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+              <span>
+                &nbsp YASMIN LLC
+              </span>
+              <br>
+              &nbsp &nbsp &nbsp<span>SHARJAH, UAE</span>
+            </p>
+
+            <p>
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span>
+                &nbsp Call +9716 5342 544/737
+              </span>
+            </p>
+            <p>
+              <i class="fa fa-globe"></i>
+              <span>
+                &nbsp taupe.ae
+              </span>
+            </p>
+            <a href="https://wa.me/+9716 5342 544" target="_blank">
+              <i class="fa fa-whatsapp" aria-hidden="true"></i>Message Us
+            </a>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end info_section -->
+    
+      <!-- footer section -->
+  <footer class="footer_section">
+    <div class="container">
+      <p>
+        &copy; <span id="displayYear"></span> All Rights Reserved By
+        <a href="">Taupe</a>
+      </p>
+    </div>
+  </footer>
+  <!-- footer section -->
 </body>
 </html>
