--- a/shop.html
+++ b/shop.html
@@ -47,6 +47,7 @@
                 <a href="brand.html">Brand</a>
                 <a href="shop.html">Products</a>
                 <a href="clients.html">Clients</a>
+                <a href="blog.html">Contact us</a>
               </div>
             </div>
           </div>
@@ -374,6 +375,17 @@
       paraElement.innerText = itemObj[item].description
     }
   </script>
+
+    <!-- footer section -->
+    <footer class="footer_section">
+      <div class="container">
+        <p>
+          &copy; <span id="displayYear"></span> All Rights Reserved By
+          <a href="">Taupe</a>
+        </p>
+      </div>
+    </footer>
+    <!-- footer section -->
 
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
