--- a/brand.html
+++ b/brand.html
@@ -46,7 +46,7 @@
                   <a href="brand.html">Brand</a>
                   <a href="shop.html">Products</a>
                   <a href="clients.html">Clients</a>
-                  <!-- <a href="blog.html">Contact us</a> -->
+                  <a href="blog.html">Contact us</a>
                 </div>
               </div>
             </div>
@@ -265,7 +265,7 @@
   </section>
 
    <!-- Q & A section -->
-   <section class="about_section m-2">
+   <!-- <section class="about_section m-2">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -382,8 +382,19 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- end Q & A section -->
+
+    <!-- footer section -->
+    <footer class="footer_section">
+      <div class="container">
+        <p>
+          &copy; <span id="displayYear"></span> All Rights Reserved By
+          <a href="">Taupe</a>
+        </p>
+      </div>
+    </footer>
+    <!-- footer section -->
 
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
