--- a/clients.html
+++ b/clients.html
@@ -52,7 +52,7 @@
                     <a href="brand.html">Brand</a>
                     <a href="shop.html">Products</a>
                     <a href="clients.html">Clients</a>
-                    <!-- <a href="blog.html">Contact us</a> -->
+                    <a href="blog.html">Contact us</a>
                   </div>
                 </div>
               </div>
@@ -306,8 +306,20 @@
       </div>
     </section>
 
+      <!-- footer section -->
+  <footer class="footer_section">
+    <div class="container">
+      <p>
+        &copy; <span id="displayYear"></span> All Rights Reserved By
+        <a href="">Taupe</a>
+      </p>
+    </div>
+  </footer>
+  <!-- footer section -->
+
     <script src="js/bootstrap.js"></script>
     <script src="js/custom.js"></script>
+
 
 </body>
 </html>
