--- a/shop.html
+++ b/shop.html
@@ -376,6 +376,62 @@
     }
   </script>
 
+  <!-- info section -->
+  <section class="info_section layout_padding m-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 d-flex flex-column align-items-center text-center" style="color: #B5A595;">
+          <img src="assets/images/Taupe Logo-ai nn.png" width="20%"/>
+          <div class="mt-2 mb-3">Contact us</div>
+          <span>YASMIN LLC, SHARJAH, UAE</span>
+          <!-- <img src="assets/images/call.svg"> <span>+9716 5342 544/737</span> -->
+          <div class="d-flex align-items-center mt-1">
+            <img src="assets/images/call.svg" style="margin-right: 8px;" />
+            <span>+9716 5342 544/737</span>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-3" style="color: #B5A595;">
+        <div class="col-md-2 col-4 text-center">
+          <span>MUNEER</span><br />
+          <span>+97155 4078 004</span>
+        </div>
+        <div class="col-md-2 col-4 text-center">
+          <span>FARHAN</span><br />
+          <span>+97155 9747 125</span>
+        </div>
+        <div class="col-md-2 col-4 text-center">
+          <span>IRSHAD</span><br />
+          <span>+97158 6591 937</span>
+        </div>
+      </div>
+      <div class="row justify-content-center" style="color: #B5A595;">
+        <div class="col-md-5 col-10">
+          <hr style="background-color: #B5A595;">
+        </div>
+      </div>
+      <div class="row justify-content-center" style="color: #B5A595;">
+        <div class="col-md-5 col-10 d-flex justify-content-center text-center">
+          <div class="image-container">
+            <img src="assets/images/locaion.svg" class="with-line">
+          </div>
+          <div class="image-container">
+            <a href="blog.html">
+              <img src="assets/images/mail.svg" class="with-line">
+            </a>
+          </div>
+          <div class="image-container">
+            <a href="https://wa.me/+97165342544" target="_blank">
+              <img src="assets/images/whatsapp.svg">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end info_section -->
+
     <!-- footer section -->
     <footer class="footer_section">
       <div class="container">
