image file updated

--- a/clients.html
+++ b/clients.html
@@ -48,7 +48,7 @@
                 </button>
                 <div id="myNav" class="overlay">
                   <div class="overlay-content">
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="brand.html">Brand</a>
                     <a href="shop.html">Products</a>
                     <a href="clients.html">Clients</a>
