image and button hover updated

--- a/clients.html
+++ b/clients.html
@@ -67,7 +67,7 @@
      <!-- slider section -->
   <section class="slider_section position-relative m-2" style="height: 80vh">
     <div class="slider_bg_box">
-      <img src="assets/images/iStock-1400267055.jpg" alt="">
+      <img src="assets/images/client.jpg" alt="">
     </div>
     <div class="slider_bg"></div>
     <div class="container">
@@ -78,9 +78,7 @@
             <br> PRODUCTS
             <br> CLIENTS
           </h1>
-          <!-- <p>
-            YOUR ULTIMATE SOURCE FOR PREMIER HOSPITALITY AMENITIES + ACCESSORIES
-          </p> -->
+
           <div>
             <!-- <a href="" class="slider-link">
               Shop Now
@@ -99,7 +97,7 @@
 
     <!-- shop section -->
     <!-- <section class=" latest-products shop_section m-2"> -->
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin-top: -30px;">
             <div class="row p-2">
                 <div class="col-12" style="background-color: aliceblue; padding: 20px;">
                     <div class="row">
