--- a/index.html
+++ b/index.html
@@ -148,37 +148,34 @@
     <section class="latest-products shop_section m-2">
         <div class="row">
             <div class="col-md-4 px-5 py-md-5 py-0">
-                <!-- BillyTannery-LeatherCoasterSets-BarkBrown-2.jpg -->
               <a href="brand.html">
-                <div class="card">
-                    <img src="assets/images/iStock-1403830869.jpg" class="img-fluid" alt="Responsive image">
+                <div class="card custom-card">
+                    <img src="assets/images/iStock-1403830869.jpg" class="img-fluid" loading="lazy" alt="Responsive image">
                 </div>
-
                 <div class="text-center p-2">
-                  <span style="color: white">BRAND</span>
+                  <span class="card-text">BRAND</span>
                 </div>
               </a>
             </div>
 
             <div class="col-md-4 px-5 py-md-5 py-0">
               <a href="shop.html">
-                <div class="card">
-                    <img src="assets/images/products-banner.jpg" class="img-fluid" alt="Responsive image">
+                <div class="card custom-card">
+                    <img src="assets/images/products-banner.jpg" class="img-fluid" loading="lazy" alt="Responsive image">
                   </div>
                   <div class="text-center p-2">
-                    <span style="color: white">PRODUCTS</span>
+                    <span class="card-text">PRODUCTS</span>
                 </div>
               </a>
             </div>
 
             <div class="col-md-4 px-5 py-md-5 py-0">
-                <!-- BillyTannery-LeatherCoasterSets-BarkBrown-2.jpg -->
               <a href="clients.html">
-                <div class="card">
-                    <img src="assets/images/iStock-1400267055.jpg" class="img-fluid" alt="Responsive image">
+                <div class="card custom-card">
+                    <img src="assets/images/client.jpg" class="img-fluid" loading="lazy" alt="Responsive image">
                 </div>
                 <div class="text-center p-2">
-                  <span style="color: white">CLIENTS</span>
+                  <span class="card-text">CLIENTS</span>
                 </div>
               </a>
             </div>
