--- a/clients.html
+++ b/clients.html
@@ -67,7 +67,7 @@
      <!-- slider section -->
   <section class="slider_section position-relative m-2" style="height: 80vh">
     <div class="slider_bg_box">
-      <img src="assets/images/client.jpg" alt="">
+      <img src="assets/images/iStock-1400267055.jpg" alt="">
     </div>
     <div class="slider_bg"></div>
     <div class="container">
