--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="col-md-4 px-5 py-md-5 py-0">
               <a href="clients.html">
                 <div class="card custom-card">
-                    <img src="assets/images/client.jpg" class="img-fluid" loading="lazy" alt="Responsive image">
+                    <img src="assets/images/iStock-1400267055.jpg" class="img-fluid" loading="lazy" alt="Responsive image">
                 </div>
                 <div class="text-center p-2">
                   <span class="card-text">CLIENTS</span>
